--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
              "validator" : ">=0.1.7",
              "nodemailer" : ">=0.1.8",
              "expresso" : ">=0.7.3",
+             "request" : ">=1.9.0",
              "should" : ">=0.0.4"              
   }             
 }
