--- a/package.json
+++ b/package.json
@@ -7,16 +7,18 @@
     "type": "git",
     "url": "git://github.com/cliftonc/npm-users"
   },
-  "author": "Clifton Cunningham <clifton.cunningham@gmail.com> (cliftoncunningham.co.uk)",  
+  "author": "Clifton Cunningham <clifton.cunningham@gmail.com> (cliftoncunningham.co.uk)",
   "engines" : { "node" : "0.4 || 0.5" },
-  "dependencies" : { 
+  "dependencies" : {
              "express" : ">=2.0.0beta3",
              "connect" : ">=1.0.3",
              "ejs" : ">=0.3.1",
              "validator" : ">=0.1.7",
              "nodemailer" : ">=0.1.8",
+             "request" : ">=1.9.0"
+  },
+  "devDependencies" : {
              "expresso" : ">=0.7.3",
-             "request" : ">=1.9.0",
-             "should" : ">=0.0.4"              
-  }             
+             "should" : ">=0.0.4"
+  }
 }
